fix widths and heights this fixes the problem with the 5-day forecast jumping issue

--- a/wdd230/lesson11/styles/main-style.css
+++ b/wdd230/lesson11/styles/main-style.css
@@ -410,9 +410,13 @@ section.forecast h3 {
     padding: 0.5rem;
     display: block;
 }
+.weather-icon {
+    padding: 10px 0;
+    height: 50px;
+}
 .weather-icon img {
     display: block;
-    margin: 10px auto;
+    margin: 0 auto;
     transform: scale(1.5);
     filter: drop-shadow(1px 1px 1px var(--default-dark));
 }
